--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 <div class="grid lg:grid-cols-2 gap-16 items-center">
 <div class="relative">
 <div class="absolute -bottom-6 -left-6 bg-brand-teal w-64 h-64 rounded-3xl -z-10 opacity-10"></div>
-<img alt="Manuel García" class="rounded-[2.5rem] w-full aspect-[4/5] object-cover shadow-2xl border-8 border-slate-50" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAYfZcfB1Mh6NKPvuyx53-qKUJvI6DfmboGPxkvnIBjrFBcBWPhg59lFKpYfcYIvjnGfyVoMamX2x5qPxppn3Rn45sg7QzanjgCH7OkGND7tktfwebTeTa0brqcLPqMw1YGzDRBvpMwKPZi8YEZbeMhW103O22uGd7Ab0OA9_gGVjlCgT9jPfkBz3YaAQHEXWe9Hn7WIxrTmdkdwtweqeibm8WQj4C6SonTUAgNQJQGKDisfBzMSZFo7I5c7MijiFcHzKuYC8ukG20"/>
+<img alt="Manuel García" class="rounded-[2.5rem] w-full aspect-[4/5] object-cover shadow-2xl border-8 border-slate-50" src="facilitador.png"/>
 <div class="absolute -bottom-4 right-8 bg-white p-6 rounded-2xl shadow-xl border border-slate-100">
 <p class="text-brand-navy font-bold italic">"Acompañando la búsqueda del para qué."</p>
 </div>
@@ -381,5 +381,6 @@
 </div>
 </div>
 </footer>
+
 
 </body></html>
