--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body class="antialiased">
 <header class="fixed top-0 w-full z-50 bg-white/95 backdrop-blur-md border-b border-slate-100">
 <div class="max-w-7xl mx-auto flex justify-center items-center px-6 py-4">
-<img alt="Logo Instituto Venezolano de Logoterapia" class="h-12 w-auto" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDLeZjU6iXZ8nE5QNPD1qMD-In7mEcZGObgA34AwNLiFXLpPSGtaePzEbLG8YomHk_zYk-3mDsc3ef2x3YWWxfxVl3tlqcWOR8gSuHtcOErQHLI_s3W0-P2_RpWHkyn21VyebF9THYvP1oZJmg67pymUNSakgzRIyZsrZ54HrL6CFbsdr6gwgCvT4DdqmjAC1g8dzTJjPcLMKZRsi6Hh7AqKcd31jHduqEZAu0eTxTXJ_zFhWBjEHtJEwtMYUdL1y_0vmTFOi4cmeI"/>
+<img alt="Logo Instituto Venezolano de Logoterapia" class="h-12 w-auto" src="logo.png"/>
 </div>
 </header>
 <main>
@@ -384,3 +384,4 @@
 
 
 </body></html>
+
