--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
-<html class="scroll-smooth" lang="es"><head>
+<html class="light" lang="es"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Introducción a la Logoterapia | Instituto Venezolano de Logoterapia</title>
-<script src="https://cdn.tailwindcss.com?plugins=forms,typography,container-queries"></script>
+<title>Logoterapia Esencial: Estructura de Conversión Final | Instituto Venezolano de Logoterapia</title>
+<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&amp;family=Playfair+Display:ital,wght@0,700;0,900;1,400;1,700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&amp;family=Inter:wght@300;400;500;600&amp;display=swap" rel="stylesheet"/>
-<script>
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              primary: "#0f3a85", // Exact Deep Blue from reference logo
-              secondary: "#19a39a", // Exact Teal from reference logo
-              "background-light": "#fdfdfe",
-              "background-dark": "#0a1120",
+<script id="tailwind-config">
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "brand-teal": "#16a3b1",
+                        "brand-navy": "#143f8a",
+                        "brand-slate": "#1e293b",
+                        "background-light": "#fcfdfd",
+                    },
+                    fontFamily: {
+                        "sans": ["Plus Jakarta Sans", "sans-serif"],
+                        "serif": ["Playfair Display", "serif"]
+                    }
+                },
             },
-            fontFamily: {
-              display: ["Montserrat", "sans-serif"],
-              body: ["Inter", "sans-serif"],
-            },
-            borderRadius: {
-              DEFAULT: "0.5rem",
-            },
-          },
-        },
-      };
+        }
     </script>
 <style type="text/tailwindcss">
         @layer base {
@@ -388,6 +384,7 @@
 
 
 </body></html>
+
 
 
 
