--- a/index.html
+++ b/index.html
@@ -61,11 +61,9 @@
         }
     </style>
 </head>
-<body class="bg-background-light dark:bg-background-dark text-slate-800 dark:text-slate-200 transition-colors duration-300">
-<nav class="fixed w-full z-50 bg-white/95 dark:bg-background-dark/95 backdrop-blur-md border-b border-slate-100 dark:border-slate-800">
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<div class="flex justify-between items-center h-20">
-<div class="flex items-center gap-4">
+<body class="antialiased">
+<header class="fixed top-0 w-full z-50 bg-white/95 backdrop-blur-md border-b border-slate-100">
+<div class="max-w-7xl mx-auto flex justify-center items-center px-6 py-4">
 <img alt="Instituto Logo" class="h-16 w-auto" src="logo.png"/>
 <div class="hidden lg:block text-[11px] font-extrabold leading-tight uppercase tracking-tight text-primary dark:text-white border-l border-slate-200 dark:border-slate-700 pl-4">
                     INSTITUTO VENEZOLANO<br/>
@@ -390,6 +388,7 @@
 
 
 </body></html>
+
 
 
 
