--- a/index.html
+++ b/index.html
@@ -288,7 +288,22 @@
 <div class="max-w-3xl mx-auto mt-8">
 <p class="font-serif italic text-xl md:text-2xl text-slate-600">
                         "Quien tiene un porqué para vivir, puede soportar casi cualquier cómo." — Nietzsche
-                    </p>
+                         </p>
+v class="grid md:grid-cols-3 gap-8 mb-20">
+<div class="flex flex-col items-center text-center p-8 bg-white rounded-2xl border border-slate-100 shadow-sm">
+<span class="material-symbols-outlined text-brand-navy text-4xl mb-4">schedule</span>
+<h4 class="font-bold text-brand-navy">6 Horas Académicas</h4>
+<p class="text-slate-500 text-sm mt-2">Intensivo y transformador</p>
+</div>
+<div class="flex flex-col items-center text-center p-8 bg-white rounded-2xl border border-slate-100 shadow-sm">
+<span class="material-symbols-outlined text-brand-teal text-4xl mb-4">video_call</span>
+<h4 class="font-bold text-brand-navy">Sesiones por Zoom</h4>
+<p class="text-slate-500 text-sm mt-2">En vivo e interactivo</p>
+</div>
+<div class="flex flex-col items-center text-center p-8 bg-white rounded-2xl border border-slate-100 shadow-sm">
+<span class="material-symbols-outlined text-brand-teal text-4xl mb-4">workspace_premium</span>
+<h4 class="font-bold text-brand-navy">Certificado Digital</h4>
+<p class="text-slate-500 text-sm mt-2">Avalado por el IVEL</p>   
 </div>
 </div>
 <div class="max-w-xl mx-auto bg-white rounded-[2.5rem] shadow-[0_40px_100px_-20px_rgba(20,63,138,0.2)] border-2 border-slate-50 overflow-hidden text-center relative">
@@ -388,6 +403,7 @@
 
 
 </body></html>
+
 
 
 
