--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 <p class="font-serif italic text-xl md:text-2xl text-slate-600">
                         "Quien tiene un porqué para vivir, puede soportar casi cualquier cómo." — Nietzsche
                          </p>
-
+<div
 <div class="flex flex-col items-center text-center p-8 bg-white rounded-2xl border border-slate-100 shadow-sm">
 <span class="material-symbols-outlined text-brand-navy text-4xl mb-4">schedule</span>
 <h4 class="font-bold text-brand-navy">6 Horas Académicas</h4>
@@ -403,6 +403,7 @@
 
 
 </body></html>
+
 
 
 
