--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <span class="material-symbols-outlined group-open:rotate-180 transition-transform text-brand-teal">expand_more</span>
 </summary>
 <div class="px-6 pb-6 text-slate-600 leading-relaxed border-t border-slate-50 pt-4">
-                        Todas las clases quedan grabadas y tendrás acceso a ellas por tiempo ilimitado para que las consultes cuando desees.
+                        Todas las clases quedan grabadas y tendrás acceso a ellas por 3 meses para que las consultes cuando desees.
                     </div>
 </details>
 <details class="group bg-white rounded-2xl border border-slate-100 p-2 shadow-sm">
@@ -398,3 +398,4 @@
 </footer>
 
 </body></html>
+
