--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <div class="grid md:grid-cols-12 gap-12 items-center">
 <div class="md:col-span-5">
 <div class="facilitator-photo-container relative cursor-pointer overflow-hidden rounded-2xl shadow-xl">
-<img alt="Manuel García" class="facilitator-photo relative w-full aspect-[4/5] object-cover" src="facilitador.png"/>
+<img alt="Manuel García" class="facilitator-photo relative w-full aspect-[4/5] object-contain" src="facilitador.png"/>
 </div>
 </div>
 <div class="md:col-span-7 space-y-6">
@@ -398,4 +398,5 @@
 </footer>
 
 </body></html>
+
 
