--- a/index.html
+++ b/index.html
@@ -200,51 +200,42 @@
 </div>
 </section>
 <section class="py-24 px-6 bg-white" id="facilitador">
-    <div class="max-w-6xl mx-auto">
-        <div class="grid md:grid-cols-12 gap-12 items-center">
-            <div class="md:col-span-5">
-                <div class="facilitator-photo-container relative cursor-pointer overflow-hidden rounded-[2.5rem] shadow-2xl border-8 border-slate-50 transition-transform duration-500 hover:scale-[1.02]">
-                    <img alt="Manuel García" class="facilitator-photo relative w-full aspect-[4/5] object-cover object-top" src="facilitador.png"/>
-                    <div class="absolute bottom-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-xl shadow-lg border border-slate-100">
-                        <p class="text-brand-navy font-bold text-xs uppercase tracking-tighter">Presidente IVEL</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="md:col-span-7 space-y-6">
-                <div>
-                    <h2 class="text-5xl md:text-6xl font-black text-brand-navy mb-2">Manuel García</h2>
-                    <div class="flex items-center gap-2 text-brand-teal">
-                        <span class="material-symbols-outlined font-bold">award</span>
-                        <p class="text-2xl font-bold">Licenciado en Psicología</p>
-                    </div>
-                    <p class="text-lg font-medium text-slate-500 mt-1">Presidente del Instituto Venezolano de Logoterapia</p>
-                </div>
-
-                <p class="text-xl text-slate-600 leading-relaxed">
-                    Con amplia experiencia en formación y acompañamiento desde la Logoterapia, Manuel te guiará de forma cercana y clara a lo largo del proceso.
-                </p>
-
-                <div class="grid md:grid-cols-2 gap-6 pt-4">
-                    <div class="group cursor-pointer p-6 rounded-2xl bg-slate-50 border-2 border-transparent hover:border-brand-teal hover:bg-white hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
-                        <div class="flex items-center gap-3 mb-3">
-                            <span class="material-symbols-outlined text-brand-teal transition-transform duration-300 group-hover:scale-125">psychology</span>
-                            <h4 class="font-sans text-xs font-bold uppercase tracking-wider text-slate-400 group-hover:text-brand-teal">Especialidad</h4>
-                        </div>
-                        <p class="text-xl font-bold text-brand-navy">Formación Humana</p>
-                    </div>
-
-                    <div class="group cursor-pointer p-6 rounded-2xl bg-slate-50 border-2 border-transparent hover:border-brand-navy hover:bg-white hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
-                        <div class="flex items-center gap-3 mb-3">
-                            <span class="material-symbols-outlined text-brand-navy transition-transform duration-300 group-hover:rotate-12">center_focus_strong</span>
-                            <h4 class="font-sans text-xs font-bold uppercase tracking-wider text-slate-400 group-hover:text-brand-navy">Enfoque</h4>
-                        </div>
-                        <p class="text-xl font-bold text-brand-navy">Logoterapia IVEL</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="max-w-6xl mx-auto">
+<div class="grid md:grid-cols-12 gap-12 items-center">
+<div class="md:col-span-5">
+<div class="facilitator-photo-container relative cursor-pointer overflow-hidden rounded-2xl shadow-xl">
+<img alt="Manuel García" class="facilitator-photo relative w-full aspect-[4/5] object-cover object-top" src="facilitador.png"/>
+</div>
+</div>
+<div class="md:col-span-7 space-y-6">
+<div>
+<h2 class="text-5xl font-black text-brand-navy mb-2 tracking-tight">Manuel García</h2>
+<div class="flex flex-col gap-1">
+<span class="text-xl font-semibold text-brand-navy/80">Licenciado en Psicología</span>
+<span class="text-brand-teal font-bold uppercase tracking-wider text-sm">Presidente del Instituto Venezolano de Logoterapia</span>
+</div>
+</div>
+<p class="text-slate-700 text-lg leading-relaxed font-sans max-w-xl">
+                        Con amplia experiencia en formación y acompañamiento desde la Logoterapia, Manuel te guiará de forma cercana, humana y clara a lo largo del proceso.
+                    </p>
+<div class="flex flex-wrap gap-4">
+<span class="px-5 py-2.5 border-2 border-brand-teal text-brand-teal font-bold text-xs uppercase tracking-widest rounded-full flex items-center gap-2">
+<span class="material-symbols-outlined text-sm">school</span>
+                            Especialidad: Formación Humana
+                        </span>
+<span class="px-5 py-2.5 border-2 border-brand-teal text-brand-teal font-bold text-xs uppercase tracking-widest rounded-full flex items-center gap-2">
+<span class="material-symbols-outlined text-sm">verified</span>
+                            Enfoque: Logoterapia IVEL
+                        </span>
+</div>
+<div class="pt-6 border-t border-slate-200">
+<p class="text-brand-navy italic text-xl font-serif">
+                            "Mi propósito es facilitar el puente para que cada persona encuentre la luz de su propio sentido, incluso en la oscuridad más densa."
+                        </p>
+</div>
+</div>
+</div>
+</div>
 </section>
 <section class="py-24 px-6 bg-white">
 <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-px bg-slate-200 rounded-3xl overflow-hidden border border-slate-200 shadow-xl">
@@ -407,6 +398,7 @@
 </footer>
 
 </body></html>
+
 
 
 
