--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 </div>
 <div class="md:col-span-7 space-y-6">
 <div>
+<span class="text-brand-teal font-bold tracking-widest uppercase text-sm mb-2 block">Facilitador</span>       
 <h2 class="text-5xl font-black text-brand-navy mb-2 tracking-tight">Manuel García</h2>
 <div class="flex flex-col gap-1">
 <span class="text-xl font-semibold text-brand-navy/80">Licenciado en Psicología</span>
@@ -398,6 +399,7 @@
 </footer>
 
 </body></html>
+
 
 
 
