--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
 <div class="rounded-[2.5rem] overflow-hidden shadow-2xl border-4 border-white/20 bg-slate-200">
 <img alt="Viktor Frankl Portrait" class="frankl-portrait w-full h-[600px] object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuALePNwOznN-dC2RcmrNNxjdnh9tH3ZLD4Ysat59dlZFICvFbUzH3d4iaMK55xDH7Jch53qe2_EMFfprcB1Beo-t1w1IvTpM2_maOMoF79KNmsWgQz7rvKZOYuzElNSTeonJPa2W25CsBOk7aMXbKZQn1JZGOQfjqL11pbBHQNBMiLrQK_7O4MJ6V7oNmcoV1HmkWt-XdE7Nvlfv_Hvw7S7Pms0Bzv-Fw338F28dCA9NvQK6UR-jT1oR_WZdYWOqvHskXo6Z9ULsd4"/>
 </div>
- <div class="absolute -bottom-6 -left-6 bg-white p-4 rounded-xl shadow-2xl max-w-[200px] border border-slate-100 z-30 animate-float">
-    <span class="text-brand-teal text-2xl serif leading-none block mb-1">“</span>
+ <div class="absolute bottom-4 left-4 bg-white/95 backdrop-blur-sm p-4 rounded-xl shadow-xl max-w-[180px] border border-white/20 z-30 animate-float text-center">
+    <span class="text-brand-teal text-xl serif leading-none block mb-1 mx-auto">“</span>
     
-    <p class="text-brand-navy italic font-serif text-sm leading-snug">
+    <p class="text-brand-navy italic font-serif text-[13px] leading-tight text-center">
         "Cuando no podemos cambiar la situación, el desafío es cambiarnos a nosotros mismos."
     </p>
     
-    <p class="text-[9px] text-slate-400 mt-2 font-bold uppercase tracking-widest border-t pt-2 border-slate-100">
-        — Viktor Frankl  
+    <p class="text-[8px] text-slate-400 mt-2 font-bold uppercase tracking-widest border-t pt-1 border-slate-100 text-center">
+        — Viktor Frankl
 <p class="text-center mt-6 text-white/70 text-sm font-medium italic">Viktor Frankl: Sobreviviente y fundador de la Logoterapia</p>
 </div>
 </div>
@@ -408,6 +408,7 @@
 </footer>
 
 </body></html>
+
 
 
 
