--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 <div class="rounded-[2.5rem] overflow-hidden shadow-2xl border-4 border-white/20 bg-slate-200">
 <img alt="Viktor Frankl Portrait" class="frankl-portrait w-full h-[600px] object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuALePNwOznN-dC2RcmrNNxjdnh9tH3ZLD4Ysat59dlZFICvFbUzH3d4iaMK55xDH7Jch53qe2_EMFfprcB1Beo-t1w1IvTpM2_maOMoF79KNmsWgQz7rvKZOYuzElNSTeonJPa2W25CsBOk7aMXbKZQn1JZGOQfjqL11pbBHQNBMiLrQK_7O4MJ6V7oNmcoV1HmkWt-XdE7Nvlfv_Hvw7S7Pms0Bzv-Fw338F28dCA9NvQK6UR-jT1oR_WZdYWOqvHskXo6Z9ULsd4"/>
 </div>
-<div class="absolute -bottom-2 -left-2 bg-white p-3 rounded-xl shadow-2xl max-w-[180px] border border-slate-100 z-30 animate-float">
-<span class="text-brand-teal text-xl serif leading-none block mb-2 mx-auto">“</span>
+<div class="absolute -bottom-10 left-0 -translate-x-1/2 bg-white p-5 rounded-xl shadow-2xl w-[190px] border border-slate-100 z-40 animate-float text-center">
+    <span class="text-brand-teal text-xl serif leading-none block mb-2 mx-auto">“</span>
     
     <p class="text-brand-navy italic font-serif text-[13px] leading-snug mx-auto">
         "Cuando no podemos cambiar la situación, el desafío es cambiarnos a nosotros mismos."
@@ -410,6 +410,7 @@
 </footer>
 
 </body></html>
+
 
 
 
