--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 <h2 class="text-4xl md:text-5xl font-black leading-tight">La Logoterapia: El arte de encontrar sentido</h2>
 <div class="space-y-4">
                     </p>
-<p class="text-xl text-white leading-relaxed italic">
+<p class="text-xl text-white leading-relaxed medium">
                         Fundada por el psiquiatra Viktor Frankl tras sobrevivir a los campos de concentración, esta disciplina no se enfoca en "qué quieres de la vida, sino en qué espera la vida de ti".
                     </p>
-<p class="text-lg text-white leading-relaxed italic">
+<p class="text-lg text-white leading-relaxed medium">
                         Este curso introductorio es una brújula práctica para quienes buscan respuestas profundas sin necesidad de ser psicólogos.
                     </p>
 </div>
@@ -411,6 +411,7 @@
 </footer>
 
 </body></html>
+
 
 
 
