--- a/index.html
+++ b/index.html
@@ -415,12 +415,14 @@
 <div id="chat-widget" class="fixed bottom-24 right-8 z-[60] hidden">
     <div class="bg-white dark:bg-slate-800 w-80 md:w-96 rounded-3xl shadow-2xl border border-slate-100 overflow-hidden font-['Inter']">
         <div class="bg-[#0f3a85] p-6 text-white flex items-center gap-3">
-            <div class="relative">
-                <img src="URL_DE_TU_IMAGEN_MUJER.jpg" alt="Asesora" class="w-12 h-12 rounded-full object-cover border-2 border-[#19a39a]">
+            <div class="relative flex-shrink-0">
+                <img src="https://cdn-icons-png.flaticon.com/512/4140/4140047.png" 
+                     alt="Asesora" 
+                     class="w-12 h-12 rounded-full object-cover border-2 border-[#19a39a] bg-white">
                 <div class="absolute bottom-0 right-0 w-3 h-3 bg-green-500 border-2 border-[#0f3a85] rounded-full"></div>
             </div>
             <div>
-                <p class="font-bold text-sm text-white">Asesora Empática</p>
+                <p class="font-bold text-sm text-white leading-tight">Asesora </p>
                 <p class="text-[10px] opacity-80 uppercase tracking-widest text-white">Instituto de Logoterapia</p>
             </div>
         </div>
@@ -433,7 +435,8 @@
 
         <div class="p-4 border-t border-slate-100 bg-white dark:bg-slate-800">
             <div class="flex gap-2">
-                <input type="text" id="user-input" placeholder="Escribe tu mensaje..." class="flex-1 text-sm border-none bg-slate-100 rounded-full px-4 focus:ring-2 focus:ring-[#19a39a]">
+                <input type="text" id="user-input" placeholder="Escribe tu mensaje..." 
+                       class="flex-1 text-sm border-none bg-slate-100 rounded-full px-4 focus:ring-2 focus:ring-[#19a39a]">
                 <button onclick="handleChat()" class="bg-[#19a39a] text-white p-2 rounded-full hover:bg-[#0f3a85] transition-all">
                     <span class="material-symbols-outlined text-white">send</span>
                 </button>
@@ -442,8 +445,16 @@
     </div>
 </div>
 
-<button onclick="toggleChat()" class="fixed bottom-8 right-8 w-16 h-16 bg-[#19a39a] text-white rounded-full shadow-2xl z-[60] flex items-center justify-center hover:scale-110 transition-all">
-    <span class="material-symbols-outlined text-3xl text-white">chat</span>
+<button onclick="toggleChat()" class="fixed bottom-8 right-8 w-16 h-16 z-[60] hover:scale-110 transition-all focus:outline-none">
+    <div class="relative w-full h-full">
+        <img src="https://cdn-icons-png.flaticon.com/512/4140/4140047.png" 
+             alt="Chat" 
+             class="w-full h-full rounded-full shadow-2xl border-2 border-[#19a39a] bg-white object-cover">
+        <span class="absolute top-0 right-0 flex h-4 w-4">
+          <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#19a39a] opacity-75"></span>
+          <span class="relative inline-flex rounded-full h-4 w-4 bg-[#19a39a]"></span>
+        </span>
+    </div>
 </button>
 
 <script>
@@ -460,32 +471,30 @@ function handleChat() {
     
     if (input.value.trim() === "") return;
 
-    // Mensaje del usuario
+    // Mensaje Usuario
     const userDiv = document.createElement('div');
     userDiv.className = "bg-[#0f3a85] text-white p-3 rounded-2xl rounded-tr-none shadow-sm text-sm ml-auto max-w-[80%]";
     userDiv.textContent = input.value;
     container.appendChild(userDiv);
 
-    // Lógica de Respuesta
+    // Respuesta
     setTimeout(() => {
         const botDiv = document.createElement('div');
         botDiv.className = "bg-white p-4 rounded-2xl rounded-tl-none shadow-sm text-sm border border-slate-100 max-w-[85%]";
         
-        // CASO 1: Pregunta por Bolívares
         if (textoUsuario.includes("bolivares") || textoUsuario.includes("bolívares") || textoUsuario.includes("pago movil")) {
             botDiv.innerHTML = `
-                <p class="mb-3 text-slate-700">¡Claro que sí! Puedes realizar tu inscripción en bolívares de forma sencilla. Te estoy dirigiendo a nuestra sección de pago local...</p>
-                <div class="flex items-center gap-2 text-[#19a39a] font-bold animate-pulse">
-                    <span class="material-symbols-outlined">payments</span> Redirigiendo...
-                </div>
+                <p class="mb-3 text-slate-700">¡Con gusto! Aceptamos pagos en bolívares. Te voy a enviar directamente con nuestro equipo de administración para que te den los datos del **Pago Móvil**.</p>
+                <a href="https://wa.me/${tlf}?text=Hola,%20deseo%20realizar%20mi%20pago%20en%20bolívares.%20Por%20favor%20envíenme%20los%20datos." 
+                   target="_blank" 
+                   class="flex items-center justify-center gap-2 bg-[#19a39a] text-white px-3 py-3 rounded-xl text-center font-bold text-xs hover:opacity-90">
+                    <span class="material-symbols-outlined">payments</span> IR A PAGAR EN BOLÍVARES
+                </a>
             `;
-            setTimeout(() => { window.location.href = "#seccion-pagos-bs"; }, 2500);
-        } 
-        // CASO 2: Respuesta AIDA estándar
-        else {
+        } else {
             botDiv.innerHTML = `
-                <p class="mb-3 italic text-slate-600">Entiendo tu inquietud y es el primer paso para encontrar respuestas.</p>
-                <p class="mb-4 text-[#0f3a85] font-semibold">¿Cómo podemos acompañarte mejor hoy?</p>
+                <p class="mb-3 italic text-slate-600 font-serif">"La vida nunca se vuelve insoportable por las circunstancias, sino solo por falta de sentido y propósito."</p>
+                <p class="mb-4 text-[#0f3a85] font-semibold">¿Cómo quieres comenzar tu proceso?</p>
                 <div class="flex flex-col gap-2">
                     <a href="https://wa.me/${tlf}?text=Hola,%20busco%20apoyo%20personal." target="_blank" class="bg-[#19a39a] text-white px-3 py-2 rounded-xl text-center font-bold text-xs hover:opacity-90">BUSCO APOYO PERSONAL</a>
                     <a href="https://wa.me/${tlf}?text=Hola,%20información%20certificación." target="_blank" class="bg-[#0f3a85] text-white px-3 py-2 rounded-xl text-center font-bold text-xs hover:opacity-90">CERTIFICACIÓN PROFESIONAL</a>
@@ -500,7 +509,6 @@ function handleChat() {
     input.value = "";
 }
 </script>
-
 
 
 
