--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 </footer>
 
 </body></html>
-
+</div>
 <div id="chat-widget" class="fixed bottom-24 right-8 z-[60] hidden">
     <div class="bg-white dark:bg-slate-800 w-80 md:w-96 rounded-3xl shadow-2xl border border-slate-100 overflow-hidden font-['Inter']">
         <div class="bg-[#0f3a85] p-6 text-white flex items-center gap-3">
@@ -527,6 +527,7 @@ function handleChat() {
     input.value = "";
 }
 </script>
+
 
 
 
