--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     <div class="bg-white dark:bg-slate-800 w-80 md:w-96 rounded-3xl shadow-2xl border border-slate-100 overflow-hidden font-['Inter']">
         <div class="bg-[#0f3a85] p-6 text-white flex items-center gap-3">
             <div class="relative flex-shrink-0">
-                <img src="https://input.com/image_generation_content/0" 
+                <img src="asesora.png" 
                      alt="Asesora" 
                      class="w-12 h-12 object-contain bg-transparent">
                 <div class="absolute bottom-0 right-0 w-3 h-3 bg-green-500 border-2 border-[#0f3a85] rounded-full"></div>
@@ -446,7 +446,7 @@
 
 <button onclick="toggleChat()" class="fixed bottom-8 right-8 w-20 h-20 z-[60] hover:scale-110 transition-all focus:outline-none bg-transparent">
     <div class="relative w-full h-full">
-        <img src="https://input.com/image_generation_content/0" 
+        <img src="asesora.png" 
              alt="Abrir Chat" 
              class="w-full h-full object-contain drop-shadow-xl">
         
@@ -509,6 +509,7 @@ function handleChat() {
     input.value = "";
 }
 </script>
+
 
 
 
