--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 </footer>
 
 </body></html>
-<div id="chat-widget" class="fixed bottom-24 right-8 z-[60] hidden">
+<div id="chat-widget" class="fixed bottom-28 right-8 z-[60] hidden">
     <div class="bg-white dark:bg-slate-800 w-80 md:w-96 rounded-3xl shadow-2xl border border-slate-100 overflow-hidden font-['Inter']">
         <div class="bg-[#0f3a85] p-6 text-white flex items-center gap-3">
             <div class="relative flex-shrink-0">
@@ -444,13 +444,13 @@
     </div>
 </div>
 
-<button onclick="toggleChat()" class="fixed bottom-8 right-8 w-20 h-20 z-[60] hover:scale-110 transition-all focus:outline-none bg-transparent">
-    <div class="relative w-full h-full">
+<button onclick="toggleChat()" class="fixed bottom-4 right-4 w-24 h-24 z-[60] hover:scale-110 transition-all focus:outline-none bg-transparent border-none">
+    <div class="relative w-full h-full flex items-center justify-center">
         <img src="asesora.png" 
              alt="Abrir Chat" 
-             class="w-full h-full object-contain drop-shadow-xl">
+             class="w-full h-full object-contain filter drop-shadow-[0_10px_10px_rgba(0,0,0,0.3)]">
         
-        <span class="absolute top-2 right-2 flex h-4 w-4">
+        <span class="absolute top-4 right-4 flex h-4 w-4">
           <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#19a39a] opacity-75"></span>
           <span class="relative inline-flex rounded-full h-4 w-4 bg-[#19a39a]"></span>
         </span>
@@ -477,7 +477,7 @@ function handleChat() {
     userDiv.textContent = input.value;
     container.appendChild(userDiv);
 
-    // Respuesta con Lógica de Bolívares y WhatsApp
+    // Respuesta con Lógica de Bolívares y Sentido
     setTimeout(() => {
         const botDiv = document.createElement('div');
         botDiv.className = "bg-white p-4 rounded-2xl rounded-tl-none shadow-sm text-sm border border-slate-100 max-w-[85%]";
@@ -509,10 +509,6 @@ function handleChat() {
     input.value = "";
 }
 </script>
-
-
-
-
 
 
 
