--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 <div class="absolute bottom-0 right-0 w-3 h-3 bg-green-500 border-2 border-[#0f3a85] rounded-full"></div>
             </div>
             <div>
-                <p class="font-bold text-sm text-white leading-tight">Asesora Ana</p>
+                <p class="font-bold text-sm text-white leading-tight">Ana</p>
                 <p class="text-[10px] opacity-80 uppercase tracking-widest text-white">Instituto Venezolano de Logoterapia</p>
             </div>
         </div>
@@ -508,9 +508,6 @@ function handleChat() {
     input.value = "";
 }
 </script>
-
-
-
 
 
 
