--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     Inscribirme ahora por $39
                 </button>
 <div class="flex items-center gap-4 text-white/60 text-sm">
-<span class="flex items-center gap-1"><span class="material-symbols-outlined text-sm">calendar_today</span> Próxima fecha: Mayo 2024</span>
+<span class="flex items-center gap-1"><span class="material-symbols-outlined text-sm">calendar_today</span> Próxima fecha: 9 y 10 Febrero</span>
 <span class="flex items-center gap-1"><span class="material-symbols-outlined text-sm">group</span> Cupos Limitados</span>
 </div>
 </div>
@@ -134,11 +134,12 @@
 <div class="max-w-7xl mx-auto grid lg:grid-cols-2 gap-16 items-center">
 <div class="space-y-8">
 <span class="text-white/80 font-bold tracking-widest uppercase text-sm"</span>
-<h2 class="text-4xl md:text-5xl font-black leading-tight">La Logoterapia: El arte de encontrar sentido</h2>
+<h2 class="text-4xl md:text-5xl font-black leading-tight">La Logoterapia:</h2>
 <div class="space-y-4">
                     </p>
-<p class="text-xl text-white leading-relaxed medium">
-                        Fundada por el psiquiatra Viktor Frankl tras sobrevivir a los campos de concentración, esta disciplina no se enfoca en "qué quieres de la vida, sino en qué espera la vida de ti".
+<p class="text-lg text-white leading-relaxed medium">
+                        La Logoterapia es un enfoque de psicoterapia existencial creado por Viktor Frankl, que parte de una idea poderosa y profundamente humana: el ser humano no vive solo para buscar placer o evitar el dolor, sino para encontrar Sentido a su vida. Este enfoque ayuda a las personas a descubrir un propósito incluso en medio de la adversidad, el sufrimiento, la incertidumbre o las crisis personales. La Logoterapia
+enseña que aun cuando no podemos cambiar las circunstancias, siempre conservamos la libertad interior de elegir nuestra actitud y responder con responsabilidad a lo que la vida nos pide. Mas que eliminar el dolor, busca encontrar significado, fortaleciendo la dignidad, la esperanza y la capacidad de trascender, para vivir una vida más plena, consciente y con dirección..
                     </p>
 <p class="text-lg text-white leading-relaxed medium">
                         Este curso introductorio es una brújula práctica para quienes buscan respuestas profundas sin necesidad de ser psicólogos.
@@ -224,7 +225,7 @@
 <span class="text-brand-teal font-bold tracking-widest uppercase text-sm mb-2 block">Facilitador</span>       
 <h2 class="text-5xl font-black text-brand-navy mb-2 tracking-tight">Manuel García</h2>
 <div class="flex flex-col gap-1">
-<span class="text-xl font-semibold text-brand-navy/80">Licenciado en Psicología</span>
+<span class="text-xl font-semibold text-brand-navy/80">Lic en Psicología Teologia y Filosofia</span>
 <span class="text-brand-teal font-bold uppercase tracking-wider text-sm">Presidente del Instituto Venezolano de Logoterapia</span>
 </div>
 </div>
@@ -389,7 +390,7 @@
 <footer class="bg-white border-t border-slate-100 pt-24 pb-12">
 <div class="max-w-7xl mx-auto px-6">
 <div class="text-center mb-20 max-w-2xl mx-auto">
-<h2 class="text-4xl font-serif font-black mb-6 text-brand-navy">Tu vida tiene un sentido, atrévete a escucharlo</h2>
+<h2 class="text-4xl font-serif font-black mb-6 text-brand-navy">Tu vida tiene un sentido, atrévete a buscarlo</h2>
 <p class="text-brand-slate/60 text-lg mb-10">Te acompañamos en este viaje de redescubrimiento existencial.</p>
 <div class="flex flex-col items-center gap-4">
 <img alt="IVEL Logo" class="h-24 mx-auto" src="logo.png"/>
@@ -564,6 +565,7 @@ function handleChat() {
     }, 1000);
 }
 </script>
+
 
 
 
