--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
 <div class="space-y-4">
                     </p>
 <p class="text-lg text-white leading-relaxed medium">
-                        La Logoterapia es un enfoque de psicoterapia existencial creado por Viktor Frankl, que parte de una idea poderosa y profundamente humana: el ser humano no vive solo para buscar placer o evitar el dolor, sino para encontrar Sentido a su vida. Este enfoque ayuda a las personas a descubrir un propósito incluso en medio de la adversidad, el sufrimiento, la incertidumbre o las crisis personales. La Logoterapia
-enseña que aun cuando no podemos cambiar las circunstancias, siempre conservamos la libertad interior de elegir nuestra actitud y responder con responsabilidad a lo que la vida nos pide. Mas que eliminar el dolor, busca encontrar significado, fortaleciendo la dignidad, la esperanza y la capacidad de trascender, para vivir una vida más plena, consciente y con dirección..
+Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene que el principal motor del ser humano es la búsqueda de sentido, más allá del placer o la evitación del dolor. Ayuda a descubrir propósito incluso en la adversidad y enseña que, aunque no siempre podamos cambiar las circunstancias, sí podemos elegir nuestra actitud y responder con responsabilidad. Su objetivo no es eliminar el sufrimiento, sino encontrar significado en él, fortaleciendo la dignidad, la esperanza y la capacidad de trascender para vivir una vida más plena y con dirección
                     </p>
 <p class="text-lg text-white leading-relaxed medium">
                         Este curso introductorio es una brújula práctica para quienes buscan respuestas profundas sin necesidad de ser psicólogos.
@@ -565,6 +564,7 @@ function handleChat() {
     }, 1000);
 }
 </script>
+
 
 
 
