--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
 <div class="border-t border-slate-100 pt-12 flex flex-col md:flex-row justify-between items-center gap-8">
 <p class="text-slate-400 text-sm">©  Instituto Venezolano de Logoterapia y Análisis Existencial. IVEL.</p>
 <div class="flex gap-8">
-<a class="text-slate-400 hover:text-brand-teal transition-colors text-sm font-bold" href="#">Política de Privacidad</a>
-<a class="text-slate-400 hover:text-brand-teal transition-colors text-sm font-bold" href="#">Términos de Servicio</a>
+<a class="text-slate-400 hover:text-brand-teal transition-colors text-sm font-bold" href="privacidad.html">Política de Privacidad</a>
+<a class="text-slate-400 hover:text-brand-teal transition-colors text-sm font-bold" href="terminos.html">Términos de Servicio</a>
 <a class="text-slate-400 hover:text-brand-teal transition-colors text-sm font-bold" href="#">Contacto</a>
 </div>
 </div>
@@ -565,6 +565,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
     </script>
 </body>
 </html>
+
 
 
 
