--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html class="light" lang="es"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Logoterapia Esencial | Instituto Venezolano de Logoterapia</title>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&amp;family=Playfair+Display:ital,wght@0,700;0,900;1,400;1,700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<script id="tailwind-config">
+<html class="light" lang="es">
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Logoterapia Esencial | Instituto Venezolano de Logoterapia</title>
+    
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,700;0,900;1,400;1,700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
             theme: {
@@ -16,7 +20,6 @@
                         "brand-navy": "#123D8A",
                         "brand-slate": "#1e293b",
                         "background-light": "#fcfdfd",
-                        "neutral-soft": "#f8fafc",
                     },
                     fontFamily: {
                         "sans": ["Plus Jakarta Sans", "sans-serif"],
@@ -26,15 +29,205 @@
             },
         }
     </script>
-<style type="text/tailwindcss">
+
+    <style type="text/tailwindcss">
         @layer base {
             body { @apply font-sans bg-background-light text-brand-slate; }
             h1, h2, h3, h4 { @apply font-serif; }
         }
-        .hero-gradient {
-            background: linear-gradient(135deg, #19A69A 0%, #ffffff 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+        .chat-scroll::-webkit-scrollbar { width: 4px; }
+        .chat-scroll::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .animate-msg { animation: fadeIn 0.3s ease-out forwards; }
+    </style>
+</head>
+
+<body class="antialiased">
+
+    <header class="fixed top-0 w-full z-50 bg-white/95 backdrop-blur-md border-b border-slate-100">
+        <div class="max-w-7xl mx-auto flex items-center justify-center px-6 py-4">
+            <div class="flex items-center gap-4">
+                <img alt="Logo IVEL" class="h-12 w-auto" src="logo.png"/>
+                <div class="flex flex-col text-center">
+                    <span class="text-brand-navy font-extrabold tracking-tight text-sm leading-none uppercase">Instituto Venezolano</span>
+                    <span class="text-brand-teal font-medium tracking-tight text-[10px] leading-none uppercase mt-1">de Logoterapia Y ANÁLISIS EXISTENCIAL</span>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="relative pt-32 pb-20 md:pt-48 md:pb-40 overflow-hidden bg-brand-navy">
+            <div class="max-w-5xl mx-auto px-6 relative z-10 text-center text-white">
+                <span class="inline-block px-4 py-1.5 rounded-full bg-white/10 border border-white/20 text-xs font-bold uppercase tracking-widest mb-8">
+                    Taller Online en Vivo • Via Zoom
+                </span>
+                <h1 class="text-4xl md:text-7xl font-black leading-[1.1] mb-8">Incluso en el dolor más profundo, hay un sentido esperando ser descubierto</h1>
+                <p class="text-white/80 text-xl md:text-2xl font-light max-w-3xl mx-auto leading-relaxed mb-12">
+                    Aprende a transformar la crisis en oportunidad a través de los fundamentos de la Logoterapia de Viktor Frankl.
+                </p>
+                <a href="https://wa.me/584127614923?text=Hola,%20deseo%20reservar%20mi%20cupo%20ahora%20para%20el%20curso%20de%20Logoterapia." 
+                   target="_blank" class="inline-block bg-brand-teal hover:bg-[#158e83] text-white px-12 py-5 rounded-full text-xl font-black transition-all hover:scale-105 shadow-2xl">
+                    Inscribirme ahora por $39
+                </a>
+            </div>
+        </section>
+
+        <section class="py-24 px-6 bg-white" id="facilitador">
+            <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+                <img src="facilitador.png" alt="Manuel García" class="rounded-2xl shadow-xl w-full">
+                <div>
+                    <span class="text-brand-teal font-bold uppercase text-sm tracking-widest">Facilitador</span>
+                    <h2 class="text-5xl font-black text-brand-navy mb-4 leading-none">Manuel García</h2>
+                    <p class="text-xl font-semibold text-brand-navy/80 mb-4">Psicólogo, Teología y Filosofía</p>
+                    <p class="text-slate-700 leading-relaxed mb-6 italic border-l-4 border-brand-teal pl-4">
+                        "Mi propósito es facilitar el puente para que cada persona encuentre la luz de su propio sentido, incluso en la oscuridad más densa."
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-24 px-6 bg-slate-50" id="inscripcion">
+            <div class="max-w-xl mx-auto bg-white rounded-[2.5rem] shadow-2xl overflow-hidden text-center border border-slate-100">
+                <div class="bg-brand-navy text-white py-4 font-black text-xs uppercase tracking-widest">Cupos limitados • 9 y 10 de Febrero</div>
+                <div class="p-12">
+                    <h3 class="font-bold text-xl mb-6">Inversión en tu bienestar existencial</h3>
+                    <div class="text-7xl font-black text-brand-navy mb-8">$39 <span class="text-xl text-slate-400">USD</span></div>
+                    <div class="space-y-4">
+                        <a href="https://wa.me/584127614923?text=Hola,%20deseo%20reservar%20mi%20cupo%20ahora%20para%20el%20curso%20de%20Logoterapia." 
+                           target="_blank" class="block w-full bg-brand-navy text-white py-5 rounded-2xl font-black text-xl hover:bg-slate-800 transition-all transform hover:scale-[1.02]">
+                            Reservar mi cupo ahora
+                        </a>
+                        <a href="https://wa.me/584127614923?text=Hola,%20estoy%20interesado%20en%20realizar%20el%20pago%20en%20bolívares.%20Por%20favor%20envíenme%20los%20datos." 
+                           target="_blank" class="block w-full border-2 border-brand-teal text-brand-teal py-5 rounded-2xl font-black text-xl hover:bg-brand-teal hover:text-white transition-all transform hover:scale-[1.02]">
+                            Pagar en Bolívares
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-white border-t border-slate-100 pt-20 pb-12">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="flex flex-col items-center text-center">
+                
+                <div class="flex flex-col items-center gap-4 mb-6">
+                    <img alt="IVEL Logo" class="h-20 mx-auto" src="logo.png"/>
+                    <div class="flex flex-col">
+                        <span class="text-brand-navy font-extrabold tracking-tight text-lg uppercase leading-tight">Instituto Venezolano de Logoterapia</span>
+                        <span class="text-brand-teal font-medium tracking-widest text-sm uppercase">Y ANÁLISIS EXISTENCIAL. IVEL.</span>
+                    </div>
+                </div>
+
+                <div class="flex justify-center gap-8 mb-12">
+                    <a href="https://www.instagram.com/logoterapiavzla" target="_blank" class="text-slate-400 hover:text-brand-teal transition-all transform hover:scale-125">
+                        <i class="fa-brands fa-instagram text-3xl"></i>
+                    </a>
+                    <a href="https://www.facebook.com/logoterapiavzla" target="_blank" class="text-slate-400 hover:text-brand-teal transition-all transform hover:scale-125">
+                        <i class="fa-brands fa-facebook-f text-3xl"></i>
+                    </a>
+                    <a href="https://www.tiktok.com/@logoterapia.venez" target="_blank" class="text-slate-400 hover:text-brand-teal transition-all transform hover:scale-125">
+                        <i class="fa-brands fa-tiktok text-3xl"></i>
+                    </a>
+                </div>
+
+                <div class="w-full border-t border-slate-100 pt-8 flex flex-col md:flex-row justify-between items-center gap-6">
+                    <p class="text-slate-400 text-xs">© Instituto Venezolano de Logoterapia y Análisis Existencial. IVEL.</p>
+                    <div class="flex gap-8">
+                        <a class="text-slate-400 hover:text-brand-teal transition-colors text-xs font-bold" href="privacidad.html">Política de Privacidad</a>
+                        <a class="text-slate-400 hover:text-brand-teal transition-colors text-xs font-bold" href="terminos.html">Términos de Servicio</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <div id="chat-widget" class="fixed bottom-24 right-8 z-[60] hidden transition-all duration-300 transform scale-95 opacity-0">
+        <div class="bg-white w-80 md:w-96 rounded-3xl shadow-2xl border border-slate-100 overflow-hidden font-sans">
+            <div class="bg-brand-navy p-5 text-white flex items-center gap-3">
+                <img src="asesora.png" onerror="this.src='https://ui-avatars.com/api/?name=Ana&background=19A69A&color=fff'" class="w-10 h-10 rounded-full border-2 border-white object-cover">
+                <div>
+                    <p class="font-bold text-sm leading-tight">Ana</p>
+                    <p class="text-[9px] opacity-70 uppercase tracking-wider">Instituto de Logoterapia</p>
+                </div>
+            </div>
+            <div id="chat-messages" class="h-80 overflow-y-auto p-4 space-y-4 bg-slate-50 chat-scroll flex flex-col"></div>
+            <div class="p-4 bg-white border-t border-slate-100">
+                <div class="flex gap-2">
+                    <input type="text" id="user-input" placeholder="Escribe aquí..." class="flex-1 text-sm bg-slate-100 rounded-full px-4 py-2 outline-none focus:ring-1 focus:ring-brand-teal" onkeypress="if(event.key==='Enter') handleChat()">
+                    <button onclick="handleChat()" class="bg-brand-teal text-white p-2 rounded-full flex items-center shadow-md">
+                        <span class="material-symbols-outlined text-sm">send</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <button onclick="toggleChat()" class="fixed bottom-8 right-8 w-14 h-14 z-[60] hover:scale-110 active:scale-95 transition-all focus:outline-none">
+        <img src="asesora.png" onerror="this.src='https://ui-avatars.com/api/?name=Ana&background=19A69A&color=fff'" class="w-full h-full rounded-full shadow-xl border-2 border-brand-teal bg-white object-cover">
+    </button>
+
+    <script>
+        const CONFIG = {
+            tlf: "584127614923",
+            fecha: "9 y 10 de febrero",
+            psicologo: "Psicólogo Manuel García"
+        };
+        let chatIniciado = false;
+
+        function toggleChat() {
+            const chat = document.getElementById('chat-widget');
+            if (chat.classList.contains('hidden')) {
+                chat.classList.remove('hidden');
+                setTimeout(() => { chat.classList.remove('scale-95', 'opacity-0'); chat.classList.add('scale-100', 'opacity-100'); }, 10);
+                if (!chatIniciado) {
+                    setTimeout(() => enviarMensajeBot(`¡Hola! Soy Ana. El taller con el <strong>${CONFIG.psicologo}</strong> es el <strong>${CONFIG.fecha}</strong>. ¿Buscas apoyo personal o profesional?`), 500);
+                    chatIniciado = true;
+                }
+            } else {
+                chat.classList.add('scale-95', 'opacity-0');
+                setTimeout(() => chat.classList.add('hidden'), 300);
+            }
+        }
+
+        function enviarMensajeBot(html) {
+            const container = document.getElementById('chat-messages');
+            const div = document.createElement('div');
+            div.className = "bg-white p-3 rounded-2xl rounded-tl-none shadow-sm text-sm border border-slate-100 max-w-[85%] text-slate-700 self-start animate-msg";
+            div.innerHTML = html;
+            container.appendChild(div);
+            container.scrollTop = container.scrollHeight;
+        }
+
+        function handleChat() {
+            const input = document.getElementById('user-input');
+            const texto = input.value.trim();
+            if (!texto) return;
+            const userDiv = document.createElement('div');
+            userDiv.className = "bg-brand-navy text-white p-3 rounded-2xl rounded-tr-none text-sm ml-auto max-w-[80%] self-end animate-msg";
+            userDiv.textContent = texto;
+            document.getElementById('chat-messages').appendChild(userDiv);
+            input.value = "";
+            const low = texto.toLowerCase();
+            setTimeout(() => {
+                let r = "";
+                if (low.match(/bolivares|bs|pago movil/)) {
+                    r = `Aceptamos bolívares. <a href="https://wa.me/${CONFIG.tlf}?text=Hola,%20deseo%20pagar%20en%20bolívares" target="_blank" class="block bg-brand-teal text-white p-2 mt-2 rounded-xl text-center font-bold">PAGAR EN BS</a>`;
+                } else if (low.match(/fecha|cuando|cuándo/)) {
+                    r = `El taller es el <strong>${CONFIG.fecha}</strong> vía Zoom.`;
+                } else {
+                    r = `<div class="flex flex-col gap-2">
+                            <a href="https://wa.me/${CONFIG.tlf}?text=Hola,%20me%20gustaría%20recibir%20información%20sobre%20el%20APOYO%20PERSONAL" target="_blank" class="bg-brand-teal text-white p-2 rounded-xl text-center text-[10px] font-bold">APOYO PERSONAL</a>
+                            <a href="https://wa.me/${CONFIG.tlf}?text=Hola,%20solicito%20información%20sobre%20la%20CERTIFICACIÓN%20PROFESIONAL" target="_blank" class="bg-brand-navy text-white p-2 rounded-xl text-center text-[10px] font-bold">CERTIFICACIÓN PROFESIONAL</a>
+                         </div>`;
+                }
+                enviarMensajeBot(r);
+            }, 600);
+        }
+    </script>
+</body>
+</html>            -webkit-text-fill-color: transparent;
         }
         .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 24; }
         .frankl-portrait {
@@ -565,6 +758,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
     </script>
 </body>
 </html>
+
 
 
 
