--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
 <section class="py-24 px-6 bg-brand-teal text-white overflow-hidden relative">
 <div class="max-w-7xl mx-auto grid lg:grid-cols-2 gap-16 items-center">
 <div class="space-y-8">
+<span class="text-white/80 font-bold tracking-widest uppercase text-sm"</span>
 <h2 class="text-4xl md:text-5xl font-black leading-tight">La Logoterapia:</h2>
 <div class="space-y-4">
+                   </p>
 <p class="text-lg text-white leading-relaxed medium">
 Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene que el principal motor del ser humano es la búsqueda de sentido, más allá del placer o la evitación del dolor. Ayuda a descubrir propósito incluso en la adversidad y enseña que, aunque no siempre podamos cambiar las circunstancias, sí podemos elegir nuestra actitud y responder con responsabilidad. Su objetivo no es eliminar el sufrimiento, sino encontrar significado en él, fortaleciendo la dignidad, la esperanza y la capacidad de trascender para vivir una vida más plena y con dirección
                     </p>
@@ -395,7 +397,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
 <img alt="IVEL Logo" class="h-24 mx-auto" src="logo.png"/>
 <div class="flex flex-col">
 <span class="text-brand-navy font-extrabold tracking-tight text-lg uppercase">Instituto Venezolano de Logoterapia</span>
-<span class="text-brand-teal font-medium tracking-widest text-sm uppercase">Y ANÁLISIS EXISTENCIAL. IVEL.</span>
+<span class="text-brand-teal font-medium tracking-widest text-sm uppercase">Y ANÁLISIS EXISTENCIAL.</span>
 </div>
 </div>
 <div class="flex justify-center gap-6 mt-6">
@@ -537,3 +539,4 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
     </script>
 </body>
 </html>
+
