--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <section class="py-24 px-6 bg-brand-teal text-white overflow-hidden relative">
 <div class="max-w-7xl mx-auto grid lg:grid-cols-2 gap-16 items-center">
 <div class="space-y-8">
-<span class="text-white/80 font-bold tracking-widest uppercase text-sm"</span>
+<span class="text-white/80 font-bold tracking-widest uppercase text-sm">Fundamentos</span>
 <h2 class="text-4xl md:text-5xl font-black leading-tight">La Logoterapia:</h2>
 <div class="space-y-4">
 <p class="text-lg text-white leading-relaxed medium">
@@ -538,4 +538,5 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
     </script>
 </body>
 </html>
+
 
