--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 Taller Online en Vivo • Via Zoom
             </span>
 <h1 class="text-white text-4xl md:text-7xl font-black leading-[1.1] mb-8">
-                Incluso en el dolor más profundo, hay un sentido esperando ser descubierto
+                Incluso en el dolor más profundo, hay un Sentido esperando ser descubierto
             </h1>
 <p class="text-white/80 text-xl md:text-2xl font-light max-w-3xl mx-auto leading-relaxed mb-12">
                 Aprende a transformar la crisis en oportunidad a través de los fundamentos de la Logoterapia de Viktor Frankl.
@@ -225,7 +225,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
 <span class="text-brand-teal font-bold tracking-widest uppercase text-sm mb-2 block">Facilitador</span>        
 <h2 class="text-5xl font-black text-brand-navy mb-2 tracking-tight">Manuel García</h2>
 <div class="flex flex-col gap-1">
-<span class="text-xl font-semibold text-brand-navy/80">Lic en Psicología Teologia y Filosofia</span>
+<span class="text-xl font-semibold text-brand-navy/80">Lic. en Psicología,Teologia y Filosofia</span>
 <span class="text-brand-teal font-bold uppercase tracking-wider text-sm">Presidente del Instituto Venezolano de Logoterapia</span>
 </div>
 </div>
@@ -239,7 +239,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
                         </span>
 <span class="px-5 py-2.5 border-2 border-brand-teal text-brand-teal font-bold text-xs uppercase tracking-widest rounded-full flex items-center gap-2">
 <span class="material-symbols-outlined text-sm">verified</span>
-                            Enfoque: Logoterapia IVEL
+                            Enfoque: Logoterapia
                         </span>
 </div>
 <div class="pt-6 border-t border-slate-200">
@@ -317,7 +317,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
 <div class="flex flex-col items-center text-center p-8 bg-white rounded-2xl border border-slate-100 shadow-sm">
 <span class="material-symbols-outlined text-brand-teal text-4xl mb-4">workspace_premium</span>
 <h4 class="font-bold text-brand-navy">Certificado Digital</h4>
-<p class="text-slate-500 text-sm mt-2">Avalado por el IVEL</p>
+<p class="text-slate-500 text-sm mt-2">Avalado por el Instituto de Logoterapia</p>
 </div>
 </div>
 <div class="max-w-xl mx-auto bg-white rounded-[2.5rem] shadow-[0_40px_100px_-20px_rgba(20,63,138,0.2)] border-2 border-slate-50 overflow-hidden text-center relative">
@@ -390,13 +390,13 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
 <footer class="bg-white border-t border-slate-100 pt-24 pb-12">
 <div class="max-w-7xl mx-auto px-6">
 <div class="text-center mb-20 max-w-2xl mx-auto">
-<h2 class="text-4xl font-serif font-black mb-6 text-brand-navy">Tu vida tiene un sentido, atrévete a buscarlo</h2>
+<h2 class="text-4xl font-serif font-black mb-6 text-brand-navy">Tu vida tiene un Sentido, atrévete a buscarlo</h2>
 <p class="text-brand-slate/60 text-lg mb-10">Te acompañamos en este viaje de redescubrimiento existencial.</p>
 <div class="flex flex-col items-center gap-4">
 <img alt="IVEL Logo" class="h-24 mx-auto" src="logo.png"/>
 <div class="flex flex-col">
 <span class="text-brand-navy font-extrabold tracking-tight text-lg uppercase">Instituto Venezolano de Logoterapia</span>
-<span class="text-brand-teal font-medium tracking-widest text-sm uppercase">Y ANÁLISIS EXISTENCIAL. IVEL.</span>
+<span class="text-brand-teal font-medium tracking-widest text-sm uppercase">Y ANÁLISIS EXISTENCIAL.</span>
 </div>
 </div>
 <div class="flex justify-center gap-6 mt-6">
@@ -412,7 +412,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
 </div>
 </div>
 <div class="border-t border-slate-100 pt-12 flex flex-col md:flex-row justify-between items-center gap-8">
-<p class="text-slate-400 text-sm">©  Instituto Venezolano de Logoterapia y Análisis Existencial. IVEL.</p>
+<p class="text-slate-400 text-sm">©  Instituto Venezolano de Logoterapia y Análisis Existencial.</p>
 <div class="flex gap-8">
 <a class="text-slate-400 hover:text-brand-teal transition-colors text-sm font-bold" href="privacidad.html">Política de Privacidad</a>
 <a class="text-slate-400 hover:text-brand-teal transition-colors text-sm font-bold" href="terminos.html">Términos de Servicio</a>
@@ -538,6 +538,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
     </script>
 </body>
 </html>
+
 
 
 
